--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required( VERSION 2.6 )
 
 project( GLTools )
 
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 include(Installation)
 
@@ -23,7 +23,7 @@ set ( CMAKE_BUILD_TYPE Debug )
 add_definitions ( -Wall )
 
 set ( INCLUDE_DIRS
-	"${CMAKE_SOURCE_DIR}/include"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include"
 	${INCLUDE_DIRS}
 )
 
@@ -42,25 +42,25 @@ include_directories (
 	
 	
 set ( GLTOOLS_HDRS
-	"${CMAKE_SOURCE_DIR}/include/GLBatchBase.h"
-	"${CMAKE_SOURCE_DIR}/include/GLBatch.h"
-	"${CMAKE_SOURCE_DIR}/include/GLFrame.h"
-	"${CMAKE_SOURCE_DIR}/include/GLFrustum.h"
-	"${CMAKE_SOURCE_DIR}/include/GLGeometryTransform.h"
-	"${CMAKE_SOURCE_DIR}/include/GLMatrixStack.h"
-	"${CMAKE_SOURCE_DIR}/include/GLShaderManager.h"
-	"${CMAKE_SOURCE_DIR}/include/GLTools.h"
-	"${CMAKE_SOURCE_DIR}/include/GLTriangleBatch.h"
-	"${CMAKE_SOURCE_DIR}/include/math3d.h"
-	"${CMAKE_SOURCE_DIR}/include/StopWatch.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/GLBatchBase.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/GLBatch.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/GLFrame.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/GLFrustum.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/GLGeometryTransform.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/GLMatrixStack.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/GLShaderManager.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/GLTools.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/GLTriangleBatch.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/math3d.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/StopWatch.h"
 )
 
 set ( GLTOOLS_SRCS
-	"${CMAKE_SOURCE_DIR}/src/GLBatch.cpp"
-	"${CMAKE_SOURCE_DIR}/src/GLShaderManager.cpp"
-	"${CMAKE_SOURCE_DIR}/src/GLTools.cpp"
-	"${CMAKE_SOURCE_DIR}/src/GLTriangleBatch.cpp"
-	"${CMAKE_SOURCE_DIR}/src/math3d.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/src/GLBatch.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/src/GLShaderManager.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/src/GLTools.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/src/GLTriangleBatch.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/src/math3d.cpp"
 )
 
 add_library ( gltools-static ${GLTOOLS_SRCS})	
